product2.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product2
  namespace: n2
spec:
  selector:
    matchLabels:
      app: product2-service
  replicas: 1
  template:
    metadata:
      labels:
        app: product2-service
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
            - name: nginx-public
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-public
        configMap:
          name: product2-index-html-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: product2-service
  namespace: n2
spec:
  selector:
    app: product2-service
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
